--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <h1>This is a heading</h1>
 <p>This is a paragraph.</p>
 
-<h2 href="https://tekstart03.github.io/pages/page1.html">"test link"</h2>
+<a href="https://tekstart03.github.io/pages/page1.html">test link</a>
 </body>
 </html>
 
