--- a/pages/page1.html
+++ b/pages/page1.html
@@ -3,6 +3,15 @@
 <title>HTML Tutorial</title>
 <body>
 
+<!-- Lightweight client-side loader that feature-detects and load polyfills only when necessary -->
+<script src="https://cdn.jsdelivr.net/npm/@webcomponents/webcomponentsjs@2/webcomponents-loader.min.js"></script>
+
+<!-- Load the element definition -->
+<script type="module" src="https://cdn.jsdelivr.net/gh/zerodevx/zero-md@1/src/zero-md.min.js"></script>
+
+<!-- Simply set the `src` attribute to your MD file and win -->
+<zero-md src="test.md"></zero-md>
+
 <h1>This is a page</h1>
 <p>This is a contents.</p>
 
